# codex-workflow-harness

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: project_profile.md  proof_pack.md  recipes.md  resume_brief.md  review_process.md  roadmap.md  task_modes.md  workflow.md
docs/recipes/: bugfix.md  feature.md  open-source-pr.md  refactor.md  take-home.md
docs/templates/: phase.md  plan.md  project_profile.md  proof_pack.md  review.md  spec.md
docs/zh/: workflow_explained.md
src/codex_harness/: __init__.py  cli.py  profile.py  proof.py  resume.py  review.py  status.py  tasks.py  verification.py
tests/: test_cli.py  test_docs.py  test_project_init.py  test_task_proof.py  test_task_resume.py  test_task_review.py  test_task_start.py  test_task_status.py  test_task_verify.py
